<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource"
    android:background="@drawable/background_gradient">


    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_btn_exchange_list_crypto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_back_btn_list_crypto"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleCrypto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:textAlignment="center"
            android:text="@string/titleExchangeCrypto"
            style="@style/titleForCryptoExchange" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_container"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMyCoinLeft"
            style="@style/myCoin"/>

        <TextView
            android:id="@+id/counter_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:hint="0"
            android:textColorHint="#8185A2"
            style="@style/myCoin"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/mySelectCoin_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            style="@style/myCoin"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/convert_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/myCoin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_crypto_exchange_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_bitcoin"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/symbol_exchange_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="BTC"
            style="@style/titleForCryptoExchange"/>

        <ImageView
            android:id="@+id/btn_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_dropdown"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/input_coin_exchange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxLength="20"
            android:textAlignment="textEnd"
            android:background="@null"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:text="0"
            android:textColorHint="@color/white"
            style="@style/titleForCryptoExchange"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_and_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/convert_coin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_gravity="left|center"
            android:background="@drawable/ic_line_2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/btn_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_btn_convert"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myCoin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_and_btn"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtIwant"
            style="@style/myCoin"/>

        <TextView
            android:id="@+id/mySelectCoin_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:text="@string/txt_bitcoin"
            style="@style/myCoin"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/convert_coin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/myCoin1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_crypto_exchange_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_bitcoin"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/symbol_exchange_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_symbol"
            style="@style/titleForCryptoExchange"/>

        <ImageView
            android:id="@+id/btn_dropdown1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_dropdown"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/out_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="0,00"
            style="@style/titleForCryptoExchange"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</RelativeLayout>